modificacao dados pessoais

--- a/index.html
+++ b/index.html
@@ -32,8 +32,8 @@
                         <p>Estudante - Full Stack Developer</p>
                         <ul>
                             <li><a href="mailto:prgmgava@hotmail.com"><strong>Email: </strong> prgmgava@hotmail.com</a></li>
-                            <li><a href="tel:+5527998393948"><strong>Tel: </strong> (27) 9 9839-3948</a></li>
-                            <li><a href="https://www.google.com.br/maps/@-18.9531332,-40.515262,359m/data=!3m1!1e3" target="_blank" rel="external"><strong>Endereço: </strong> Córrego da Lapa,São Gabriel da Palha - ES</a></li>
+                            <li><a href="tel:027998393948"><strong>Tel: </strong> (27) 9 9839-3948</a></li>
+                            <li><a href="https://www.google.com.br/maps/place/S%C3%A3o+Gabriel+da+Palha,+ES,+29780-000/@-19.0225009,-40.5729302,11495m/data=!3m2!1e3!4b1!4m5!3m4!1s0xb6646c802faab9:0x2eabc760bacf1b85!8m2!3d-19.0167321!4d-40.5382136" target="_blank" rel="external"><strong>Endereço: </strong> Córrego da Lapa,São Gabriel da Palha - ES</a></li>
                         </ul>
                     </div>
                 </div>
